[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/pause_overlay.gd" type="Script" id=1]
[ext_resource path="res://scenes/ui/MenuButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/fonts/nokiafc22.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://scenes/ui/VolumeSlider.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=1]
size = 72
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[node name="PauseOverlay" type="CanvasLayer"]
pause_mode = 2
layer = 128
script = ExtResource( 1 )

[node name="MainControl" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TransparentBackground" type="ColorRect" parent="MainControl"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.498039 )

[node name="VBoxContainer" type="VBoxContainer" parent="MainControl/TransparentBackground"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -240.0
margin_right = 300.0
margin_bottom = 240.0
rect_min_size = Vector2( 600, 0 )
custom_constants/separation = 30

[node name="PausedLabel" type="Label" parent="MainControl/TransparentBackground/VBoxContainer"]
margin_right = 600.0
margin_bottom = 90.0
custom_fonts/font = SubResource( 1 )
text = "PAUSED"
align = 1
valign = 1

[node name="VolumeSlider" parent="MainControl/TransparentBackground/VBoxContainer" instance=ExtResource( 4 )]

[node name="ResumeButton" parent="MainControl/TransparentBackground/VBoxContainer" instance=ExtResource( 2 )]
margin_top = 250.0
margin_right = 600.0
margin_bottom = 350.0
rect_min_size = Vector2( 0, 100 )
text = "Resume"

[node name="ReturnToTitleScreenButton" parent="MainControl/TransparentBackground/VBoxContainer" instance=ExtResource( 2 )]
margin_top = 380.0
margin_right = 600.0
margin_bottom = 480.0
rect_min_size = Vector2( 0, 100 )
text = "Return to Title Screen"
